# crea_zik_electro_ia

./: .dockerignore  .gitignore  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INIT_SUMMARY.md  INSTALL.md  LICENSE  README.md  SECURITY.md  llms.txt  ollama_call.sh  pyproject.toml  requirements.txt  run.py
.claude/: CLAUDE.md
.claude/commands/: close.md  start.md
UI/: audio.py  main.py
_contexte/: _manifest.md  contexte.md  signals.md
_docs/: protocole_vibecoding.md
