[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crea-zik"
version = "0.1.0"
description = "Step sequencer drum open source avec synthese audio temps reel et interface PyQt6"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "ServOMorph", email = "servomorph14@gmail.com"}
]
keywords = ["music", "drum-machine", "step-sequencer", "audio", "pyqt", "synthesis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Artists",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.26.0",
    "sounddevice>=0.4.6",
    "PyQt6>=6.6.0",
    "watchdog>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/ServOMorph/crea_zik_electro_IA"
Repository = "https://github.com/ServOMorph/crea_zik_electro_IA.git"
Issues = "https://github.com/ServOMorph/crea_zik_electro_IA/issues"
Discussions = "https://github.com/ServOMorph/crea_zik_electro_IA/discussions"
